--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "discord": "^0.8.2",
     "discord.js": "^13.1.0",
-    "node": "16.6.1"
+    "intl": "^1.2.5",
+    "node": "16.6.1",
+    "node-fetch": "^3.2.6",
+    "xhr2": "^0.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
